A letter was added only

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                     <div class="layout">
                         <div class="layout_item w-50">
                             <div class="newsletter">
-                                <h3 class="newsletter_title">Thank you so much for visiting my profile, hope you have
+                                <h3 class="newsletter_title">Thank you so much for visiting my profile, I hope you have
 
                                     enjoyed it.</h3>
                                 <form action="">
