Some grammatical changes were performed

--- a/index.html
+++ b/index.html
@@ -58,22 +58,20 @@
                             <h1>Andres Marcial <BR />Tecpile Itehua</h1>
                             <h3>Javascript Full Stack developer</h3>
                             <h4>About me</h4>
-                            <p class="text-center">Hello, I am a mechatronics engineer with an emphasis on JavaScript
+                            <p class="text-center">Hello, I am a mechatronics engineer with an emphasis in JavaScript
                                 Web Development, I
-                                really
                                 like
-                                being self-taught and keep myself in constantly learning, I have chosen to study
-                                this
-                                career
+                                being self-taught and I keep myself in constantly learning. I have chosen to study
+                                Mechatronics Engineering
                                 because of
-                                the wide knowledge I got after graduation, one of my proud achievements up to now is
+                                the wide knowledge I received after graduation. One of my proud achievements up to now
+                                is
                                 the
                                 fact
                                 that I
-                                have not given up on myself, since I decided to have finished my career and had it
-                                accomplished,
+                                have not given up on myself. Since I decided to finish my education and accomplished it,
                                 my
-                                major interest has been to always do my best in every goal I set for myself. </p>
+                                major interest has been to continue to do my best in every goal I set for myself. </p>
                             <div>
                                 <div class="col">
                                     <picture>
@@ -98,22 +96,15 @@
         <div class="row" id="filas">
             <div class="col">
                 <br />
-                <p>I worked at loganmex manufactoring for 5 months after graduate, I performed as an
-                    electric
-                    test
+                <p>I worked at loganmex manufacturing for 5 months after graduation. I performed as an electric test
                     technician. </p>
-                <h5>Responsabilities performed:</h5>
+                <h5>Responsibilities performed:</h5>
                 <ol><br />
-                    <ol>developing code for the microcontroller Arduino Uno </ol> <br />
-                    <ol>Providing with technical support to production area when Cirris tester devices
-                        were
-                        not
-                        working
+                    <ol>Development of code for the microcontroller Arduino Uno </ol> <br />
+                    <ol>Providing technical support to the production area when Cirris tester devices were not working
                         properly </ol><br />
-                    <ol>verifying the proper working of client's electronic products by performing
-                        impedance,
-                        continuity,
-                        and high voltage tests especially in harnesses. </ol><br />
+                    <ol>Verification and validation of the proper working of client's electronic products by performing
+                        impedance, continuity, and high voltage tests in harnesses. </ol><br />
                 </ol>
             </div>
             <div class="col">
@@ -123,19 +114,16 @@
             <div class="w-100"></div>
             <div class="col">
                 <br />
-                <p>I worked at flextronics manufactoring for 4 months after work at loganmex
-                    manufactoring,
-                    I
-                    perfromed
-                    as a test technical on a CISCO project, here the company produces servers.</p><br />
-                <h5>Responsabilities performed:</h5><br />
+                <p> I worked at Flextronics manufacturing for 4 months after working at loganmex manufacturing, I
+                    performed as a test technical on a CISCO project, here the company produces servers. </p><br />
+                <h5>Responsibilities performed:</h5><br />
                 <ol>
-                    <ol>Probing the servers by running scripts on linux, which perform download
+                    <ol>I Probed the servers by running scripts on Linux, which perform download
                         information
                         tests
                         and
                         set up the server's ports. </ol><br />
-                    <ol>Analyze the failure that is prompting in the unit</ol><br />
+                    <ol>Analyze the failure that is prompting in the unit </ol><br />
                     <ol>looking into the failure log the accurately hour and how many times the failure
                         was
                         encountered in the unit and why occur the failure</ol><br />
