--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <ol>Analyze the failure that is prompting in the unit </ol><br />
                     <ol>looking into the failure log the accurately hour and how many times the failure
                         was
-                        encountered in the unit and why occur the failure</ol><br />
+                        encountered in the unit and why the failure occured</ol><br />
                 </ol>
             </div>
             <div class="col">
