--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill"
                         data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile"
-                        aria-selected="false"><a href="/certifications.html">certifications</a></button>
+                        aria-selected="false"><a href="/pages/certifications.html">certifications</a></button>
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="pills-contact-tab" data-bs-toggle="pill"
                         data-bs-target="#pills-contact" type="button" role="tab" aria-controls="pills-contact"
-                        aria-selected="false"><a href="/form.html">Contact</a></button>
+                        aria-selected="false"><a href="/pages/form.html">Contact</a></button>
                 </li>
             </ul>
             <div class="tab-content" id="pills-tabContent">
